--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "date-fns": "^3.0.6",
     "framer-motion": "^10.18.0",
     "lucide-react": "^0.303.0",
-    "next": "14.0.4",
-    "next-auth": "^5.0.0-beta.4",
+    "next": "^14.2.18",
+    "next-auth": "^5.0.0-beta.25",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
